# qredis

./: CMakeLists.txt  LICENSE  README.md
include/qredis/: client.h  command.h  qredis_export.h  reply.h  request.h
src/: client.cpp  client_p.h  command.cpp  command_p.h  lexer.cpp  lexer.h  parser.cpp  parser.h  request.cpp  request_p.h
tests/: CMakeLists.txt  main.cpp  testclient.cpp  testclient.h
